implement dialogue exiting

--- a/play.html
+++ b/play.html
@@ -383,6 +383,7 @@ function dialogueReply(id) {
 		height: 60%;
 		border: 1px solid black;
 		visibility: hidden;
+		overflow: auto;
 	}
 </style>
 </head>
